# app/Http/Controllers/Controller.php
@@ -7,11 +7,30 @@ use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 /**
- * @OA\Info(
- *    title="C4 Backend API",
- *    version="1.0.0",
- * )
- */
+     * @OA\Info(
+     *      version="1.0.1",
+     *      title="4c API Practice Laravel App",
+     *      description="4c Swagger OpenApi description created by Debjit Biswas.",
+     *      @OA\Contact(
+     *          email="debjit012@gmail.com"
+     *      ),
+     *      @OA\License(
+     *          name="Apache 2.0",
+     *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
+     *      )
+     * )
+     *
+     * @OA\Server(
+     *      url=L5_SWAGGER_CONST_HOST,
+     *      description="4c api backend."
+     * )
+
+     *
+     * @OA\Tag(
+     *     name="Projects",
+     *     description="API Endpoints of Projects"
+     * )
+     */
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
