# app/Models/Post.php
@@ -5,8 +5,35 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(
+ *      title="Post",
+ *     description="Post model",
+ *     @OA\Xml(
+ *         name="Post"
+ *     ),
+ *      @OA\Property(
+ *          property="id",
+ *          description="id",
+ *          type="integer",
+ *          format="int32"
+ *      ),
+ *      @OA\Property(
+ *          property="created_at",
+ *          description="created_at",
+ *          type="string",
+ *          format="date-time"
+ *      ),
+ *      @OA\Property(
+ *          property="updated_at",
+ *          description="updated_at",
+ *          type="string",
+ *          format="date-time"
+ *      )
+ * );
+ */
 class Post extends Model
 {
     use HasFactory;
-    protected $fillable = ['title','body'];
+    protected $fillable = ['title', 'body'];
 }
